fix: truncate native token and nft names

--- a/client/src/app/components/stardust/AssetsTable.scss
+++ b/client/src/app/components/stardust/AssetsTable.scss
@@ -45,11 +45,10 @@
                     max-width: 200px;
                 }
             }
+            &.truncate {
+                max-width: 150px;
+            }
         }
-    }
-
-    .token__name {
-        align-items: center;        
     }
 }
 
@@ -96,10 +95,8 @@
     }
 }
 
-.token__name {
-    display: flex;
-}
 .token__logo {
+    vertical-align: middle;
     height: 16px;
     width: 16px;
 }
